--- a/code/client/package.json
+++ b/code/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "history": "^5.3.0",
+
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-xhr-backend": "^3.2.2",
@@ -45,6 +46,7 @@
   },
   "proxy": "http://localhost:4242",
   "devDependencies": {
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
