--- a/code/server/.env.example
+++ b/code/server/.env.example
@@ -4,7 +4,7 @@ STRIPE_SECRET_KEY=sk_12345
 STRIPE_WEBHOOK_SECRET=whsec_1234
 
 # Environment variables
-STATIC_DIR=../client
+STATIC_DIR=../client/build
 DOMAIN=http://localhost:4242
 PORT=3000
 
