--- a/code/client/package.json
+++ b/code/client/package.json
@@ -10,11 +10,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "history": "^5.3.0",
-
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-xhr-backend": "^3.2.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^11.3.4",
@@ -46,7 +46,7 @@
   },
   "proxy": "http://localhost:4242",
   "devDependencies": {
-    "prettier": "^2.0.2",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "prettier": "^2.0.2"
   }
 }
