--- a/code/server/.env.example
+++ b/code/server/.env.example
@@ -4,8 +4,8 @@ STRIPE_SECRET_KEY=sk_12345
 STRIPE_WEBHOOK_SECRET=whsec_1234
 
 # Environment variables
-STATIC_DIR=../client/build
-DOMAIN=http://localhost:4242
+STATIC_DIR=../client
+DOMAIN=http://localhost:4242/api
 PORT=3000
 
 CI=false
