--- a/code/server/package.json
+++ b/code/server/package.json
@@ -20,6 +20,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/stripe": "^8.0.417",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
