--- a/code/client/package.json
+++ b/code/client/package.json
@@ -46,7 +46,9 @@
   },
   "proxy": "http://localhost:4242",
   "devDependencies": {
+    "@types/stripe": "^8.0.417",
+    "eslint": "^8.49.0",
     "http-proxy-middleware": "^2.0.6",
-    "prettier": "^2.0.2"
+    "prettier": "^2.8.8"
   }
 }
