--- a/code/server/package.json
+++ b/code/server/package.json
@@ -22,12 +22,13 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/stripe": "^8.0.417",
-    "eslint": "^6.8.0",
+    "eslint": "^8.49.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prettier": "^2.8.8"
   }
 }
